--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -1,20 +1,16 @@
-name: Jekyll site CI
-
-on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-
-jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: Build the site in the jekyll/builder container
-      run: |
-        docker run \
-        -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
-        jekyll/builder:latest /bin/bash -c "chmod -R 777 /srv/jekyll && jekyll build --future"
+            - name: Build Jekyll for GitHub Pages
+  uses: actions/jekyll-build-pages@v1.0.13
+  with:
+    # Directory where the source files reside.
+    source: # optional, default is ./
+    # Output directory of the build. Although it can be nested inside the source, it cannot be the same as the source directory.
+    destination: # optional, default is ./_site
+    # Publishes posts with a future date. When set to true, the build is made with the --future option which overrides the future option that may be set in a Jekyll configuration file.
+    future: # optional
+    # The SHA-1 of the git commit for which the build is running. Default to GITHUB_SHA.
+    build_revision: # optional, default is ${{ github.sha }}
+    # Verbose output
+    verbose: # optional, default is true
+    # GitHub token
+    token: # default is ${{ github.token }}
+          
