--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
+*.mp4 filter=lfs diff=lfs merge=lfs -text
+*.mov filter=lfs diff=lfs merge=lfs -text
 *.mp4 !text !filter !merge !diff
 *.mov !text !filter !merge !diff
